added other pages

--- a/FarmKillPig.html
+++ b/FarmKillPig.html
@@ -10,15 +10,15 @@
 <body>
     
 <ul>
-    <li><a class="active" href="index.html">Home</a></li>
-    <li>
+    <li><a href="index.html">Home</a></li>
+    <li  class="active">
        <div class="dropdown">
         <span>Projects</span>
         <div class="dropdown-content">
             <ul>
                 <li><a href="DMTools.html">DMTools</a></li>
-                <li><a href="">Character Manager</a></li>
-                <li><a href="">FarmKillPig</a></li>
+                <li><a href="Character_Manager.html">Character Manager</a></li>
+                <li><a href="FarmKillPig.html">FarmKillPig</a></li>
                 <li><a href="">Learn Unity</a></li>
             </ul>
         </div>
@@ -30,6 +30,6 @@
 <div class="content">
     <p></p>
 </div>
-
+    
 </body>
 </html>
