--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -17,18 +17,49 @@
         <div class="dropdown-content">
             <ul>
                 <li><a href="DMTools.html">DMTools</a></li>
-                <li><a href="Character_Manager.html">Character Manager</a></li>
+                <li class="active"><a href="Character_Manager.html">Character Manager</a></li>
                 <li><a href="FarmKillPig.html">FarmKillPig</a></li>
                 <li><a href="Learn_Unity.html">Learn Unity</a></li>
             </ul>
         </div>
        </div>
     </li>
-    <li><a href="#contact">Contact</a></li>
 </ul>
   
 <div class="content">
-    <p></p>
+    <div>
+        <h1>Character Manager</h1>
+        <p>
+            This is a project that I made with WPF. it consists of c# code and
+            uses json.net to store data. I created this application because I 
+            couldn't find anything that wasn't either web based or had a learning
+            curve to it. I wanted to make something where you could open it make
+            a character and play.
+        </p>
+        <p>You can make any number of characters and each character can hold any 
+            number of items. As of right now it does not support multi classing
+            or companions, but both will be added at a later date when I have the 
+            time.
+        </p>
+        <p>
+            this project was my first time working with WPF and I learned a lot.
+            The main thing I learnt was the MVVM design pattern, and I was able to
+            reinforce what I knew about the SOLID principals.
+        </p>
+    </div>
+    <hr>
+    <div>
+        <img src="character_manager_select_chacacter.png" 
+            alt="Image of select character view">
+        <img src="character_manager_character_stats.png" 
+            alt="image of character stats view">
+        <img src="character_manager_inventory.png" 
+            alt="image of character inventory view">
+        <img src="character_manager_spellbook.png" 
+            alt="image of character spellbook view">
+        <img src="character_manager_notes.png" 
+            alt="image of character notes view">
+    </div>
 </div>
     
 </body>
