--- a/DMTools.html
+++ b/DMTools.html
@@ -16,7 +16,7 @@
         <span>Projects</span>
         <div class="dropdown-content">
             <ul>
-                <li><a href="DMTools.html">DMTools</a></li>
+                <li class="active"><a href="DMTools.html">DMTools</a></li>
                 <li><a href="Character_Manager.html">Character Manager</a></li>
                 <li><a href="FarmKillPig.html">FarmKillPig</a></li>
                 <li><a href="Learn_Unity.html">Learn Unity</a></li>
@@ -24,11 +24,27 @@
         </div>
        </div>
     </li>
-    <li><a href="#contact">Contact</a></li>
 </ul>
   
 <div class="content">
-    <p></p>
+    <h1>DM Tools</h1>
+    <p>
+        This is a project made with WPF. It functions the same as 
+        <a href="Character_Manager.html"> Character Manager</a>.
+        Currently the program supports the creation of combat encounters 
+        which you add players, monsters and NPCs too. It some with monster 
+        creation built in and keeps track of initiative and conditions. 
+        This project is in early development.
+    </p>
+    <p>
+        This was the 2nd project I made in WPF so my main focus here was the
+        design of the UI and to make effective use of my white space.
+    </p>
+    <hr>
+    <img src="DMTools_select_Adventure.png" alt="">
+    <img src="DMTools_encounter_maker.png" alt="">
+    <img src="DMTools_encounter_tracker.png" alt="">
+    <img src="DMTools_mosnter_maker.png" alt="">
 </div>
     
 </body>
