--- a/FarmKillPig.html
+++ b/FarmKillPig.html
@@ -18,17 +18,33 @@
             <ul>
                 <li><a href="DMTools.html">DMTools</a></li>
                 <li><a href="Character_Manager.html">Character Manager</a></li>
-                <li><a href="FarmKillPig.html">FarmKillPig</a></li>
-                <li><a href="">Learn Unity</a></li>
+                <li class="active"><a href="FarmKillPig.html">FarmKillPig</a></li>
+                <li><a href="Learn_Unity.html">Learn Unity</a></li>
             </ul>
         </div>
        </div>
     </li>
-    <li><a href="#contact">Contact</a></li>
 </ul>
   
 <div class="content">
-    <p></p>
+  <h1>FarmKillPig</h1>
+  <p>
+      This project is made in Unity 2D. I started making it over the summer
+      last year when I was bored. The initial project was made in roughly 2 hours
+      but I ended up sticking with the project have have been working on it over 
+      the last year (on and off). This project uses the state pattern lots, for 
+      example the weapon, player, weather, enemies, and game state are all
+      controlled by a state machine
+  </p>
+  <p>
+      The game is a wave based topdown shooter with a boss fight after every
+      five waves. You can pickup power-ups for your weapons, like fire damage,
+      freezing, etc. There is a weather system that will start special events in
+      the world depending on weather/location and a day/night cycle for the same purpose 
+      (the two systems work together). 
+  </p>
+  <img src="FarmKillPig_dashpng.png" alt="">
+  <img src="FarmKillPig_reload.png" alt="">
 </div>
     
 </body>
