--- a/index.html
+++ b/index.html
@@ -17,18 +17,17 @@
         <div class="dropdown-content">
             <ul>
                 <li><a href="DMTools.html">DMTools</a></li>
-                <li><a href="">Character Manager</a></li>
-                <li><a href="">FarmKillPig</a></li>
-                <li><a href="">Learn Unity</a></li>
+                <li><a href="Character_Manager.html">Character Manager</a></li>
+                <li><a href="FarmKillPig.html">FarmKillPig</a></li>
+                <li><a href="Learn_Unity.html">Learn Unity</a></li>
             </ul>
         </div>
        </div>
     </li>
-    <li><a href="#contact">Contact</a></li>
 </ul>
   
 <div class="content">
-    <p></p>
+    <p>Computer Science and New Media Major. Sorry for the poor design I had to throw this together short notice.</p>
 </div>
 
 </body>
