--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   
 <div class="content">
     <p>Computer Science and New Media Major. Sorry for the poor design I had to throw this together short notice.</p>
+    <p>Date updated: 2022-04-30</p>
 </div>
 
 </body>
