--- a/DMTools.html
+++ b/DMTools.html
@@ -11,6 +11,8 @@
     
 <ul>
     <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="Experience">Experience</a></li>
     <li  class="active">
        <div class="dropdown">
         <span>Projects</span>
@@ -24,6 +26,7 @@
         </div>
        </div>
     </li>
+    <li><a href="Contact">Contact</a></li>
 </ul>
   
 <div class="content">
