added contact page about page and experience page

--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -12,7 +12,7 @@
 <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
-    <li><a href="Experience">Experience</a></li>
+    <li><a href="experience.html">Experience</a></li>
     <li  class="active">
        <div class="dropdown">
         <span>Projects</span>
