--- a/FarmKillPig.html
+++ b/FarmKillPig.html
@@ -12,7 +12,7 @@
 <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
-    <li><a href="Experience">Experience</a></li>
+    <li><a href="experience.html">Experience</a></li>
     <li  class="active">
        <div class="dropdown">
         <span>Projects</span>
@@ -26,7 +26,7 @@
         </div>
        </div>
     </li>
-    <li><a href="Contact">Contact</a></li>
+    <li id="contact"><a href="Contact">Contact</a></li>
 </ul>
   
 <div class="content">
