--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="experience.html">Experience</a></li>
-    <li  class="active">
+    <li>
        <div class="dropdown">
         <span>Projects</span>
         <div class="dropdown-content">
@@ -26,20 +26,11 @@
         </div>
        </div>
     </li>
-    <li id="contact"><a href="Contact">Contact</a></li>
+    <li id="contact"  class="active"><a href="contact.html">Contact</a></li>
 </ul>
   
 <div class="content">
-    <h1>Learn Unity</h1>
-    <p>
-        This is a website that I needed to create for one of my classes
-        I chose to make a site for learning Unity2D.
-    </p>
-    <img src="comp266_desktop01.png" alt="">
-    <img src="comp266_desktop02.png" alt="">
-    <img src="comp266_mobile01.png" alt="">
-    <img src="comp266_mobile02.png" alt="">
-    <img src="comp266_mobile03.png" alt="">
+
 </div>
     
 </body>
