--- a/experience.html
+++ b/experience.html
@@ -12,8 +12,8 @@
 <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
-    <li><a href="experience.html">Experience</a></li>
-    <li  class="active">
+    <li  class="active"><a href="experience.html">Experience</a></li>
+    <li>
        <div class="dropdown">
         <span>Projects</span>
         <div class="dropdown-content">
@@ -21,25 +21,16 @@
                 <li><a href="DMTools.html">DMTools</a></li>
                 <li><a href="Character_Manager.html">Character Manager</a></li>
                 <li><a href="FarmKillPig.html">FarmKillPig</a></li>
-                <li class="active"><a href="Learn_Unity.html">Learn Unity</a></li>
+                <li><a href="Learn_Unity.html">Learn Unity</a></li>
             </ul>
         </div>
        </div>
     </li>
-    <li id="contact"><a href="Contact">Contact</a></li>
+    <li id="contact"><a href="contact.html">Contact</a></li>
 </ul>
   
 <div class="content">
-    <h1>Learn Unity</h1>
-    <p>
-        This is a website that I needed to create for one of my classes
-        I chose to make a site for learning Unity2D.
-    </p>
-    <img src="comp266_desktop01.png" alt="">
-    <img src="comp266_desktop02.png" alt="">
-    <img src="comp266_mobile01.png" alt="">
-    <img src="comp266_mobile02.png" alt="">
-    <img src="comp266_mobile03.png" alt="">
+    
 </div>
     
 </body>
