--- a/Learn_Unity.html
+++ b/Learn_Unity.html
@@ -26,7 +26,7 @@
         </div>
        </div>
     </li>
-    <li id="contact"><a href="Contact">Contact</a></li>
+    <li id="contact"><a href="contact.html">Contact</a></li>
 </ul>
   
 <div class="content">
