--- a/FarmKillPig.html
+++ b/FarmKillPig.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-<ul id="meun">
+<ul id="menu">
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="experience.html">Experience</a></li>
