moved images to their own folders

--- a/FarmKillPig.html
+++ b/FarmKillPig.html
@@ -46,8 +46,8 @@
       the world depending on weather/location and a day/night cycle for the same purpose 
       (the two systems work together). 
   </p>
-  <img src="FarmKillPig_dashpng.png" alt="">
-  <img src="FarmKillPig_reload.png" alt="">
+  <img src="img//FarmKillPig/FarmKillPig_dashpng.png" alt="">
+  <img src="img/FarmKillPig/FarmKillPig_reload.png" alt="">
 </div>
     
 </body>
