--- a/Learn_Unity.html
+++ b/Learn_Unity.html
@@ -35,11 +35,11 @@
         This is a website that I needed to create for one of my classes
         I chose to make a site for learning Unity2D.
     </p>
-    <img src="comp266_desktop01.png" alt="">
-    <img src="comp266_desktop02.png" alt="">
-    <img src="comp266_mobile01.png" alt="">
-    <img src="comp266_mobile02.png" alt="">
-    <img src="comp266_mobile03.png" alt="">
+    <img src="img/comp266/comp266_desktop01.png" alt="">
+    <img src="img/comp266/comp266_desktop02.png" alt="">
+    <img src="img/comp266/comp266_mobile01.png" alt="">
+    <img src="img/comp266/comp266_mobile02.png" alt="">
+    <img src="img/comp266/comp266_mobile03.png" alt="">
 </div>
     
 </body>
