updated character manager project page

--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -39,10 +39,12 @@
             curve to it. I wanted to make something where you could open it make
             a character and play.
         </p>
-        <p>You can make any number of characters and each character can hold any 
-            number of items. As of right now it does not support multi classing
-            or companions, but both will be added at a later date when I have the 
-            time.
+        <p>
+            You can make any number of characters and each character can hold any 
+            number of items. There is currently support for D&D 5e characters and
+            starfinder characters. When designing the project it was important that
+            it be able to support any tabletop character format if it every needed to
+            be added.
         </p>
         <p>
             this project was my first time working with WPF and I learned a lot.
@@ -53,8 +55,10 @@
     <hr>
     <div>
         <img src="img/characterManager/character_manager_select_chacacter.png" 
-            alt="Image of select character view">
+            alt="Image of select character view">    
         <img src="img/characterManager/character_manager_character_stats.png" 
+            alt="image of character stats view">
+            <img src="img/characterManager/character_manager_character_stats_starfinder.png" 
             alt="image of character stats view">
         <img src="img/characterManager/character_manager_inventory.png" 
             alt="image of character inventory view">
