--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                 <li><a href="DMTools.html">DMTools</a></li>
                 <li><a href="Character_Manager.html">Character Manager</a></li>
                 <li><a href="FarmKillPig.html">FarmKillPig</a></li>
-                <li<a href="Learn_Unity.html">Learn Unity</a></li>
+                <li><a href="Learn_Unity.html">Learn Unity</a></li>
             </ul>
         </div>
        </div>
