--- a/experience.html
+++ b/experience.html
@@ -30,6 +30,7 @@
 </ul>
   
 <div class="content">
+    <h1>Acedemic</h1>
     <p>
         During my university career I have worked with c++ to create 2 small
         console applications in groups of 4. One was a small text adventure 
@@ -56,13 +57,14 @@
         skills and tool set related to testing. for this project we needed to use
         stubs and mocking to write our tests. 
     </p>
+    <h1>Personal</h1>
     <p>
         During my free time I do like to write my own software, and have worked
         with the Unity game engine for about 5 years now and by extent C#. I 
-        also have worked with WPF to make two windows applications. These personal 
+        have also worked with WPF to make two windows applications. These personal 
         projects are where I have gotten the bulk of my experience. It was while 
-        making game in Unity that I lernt of many different design patterns and
-        I learned about some architectural patterens from working with WPF.
+        making game in Unity that I learned of many different design patterns while
+        I learned about architectural patterens working with WPF.
     </p>
 </div>
     
