worked on character manager project page

--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -52,13 +52,15 @@
             reinforce what I knew about the SOLID principals.
         </p>
     </div>
-    <hr>
-    <div>
+</div>
+
+<div class="content-right">
+    <div class="img-container">
         <img src="img/characterManager/character_manager_select_chacacter.png" 
             alt="Image of select character view">    
         <img src="img/characterManager/character_manager_character_stats.png" 
             alt="image of character stats view">
-            <img src="img/characterManager/character_manager_character_stats_starfinder.png" 
+        <img src="img/characterManager/character_manager_character_stats_starfinder.png" 
             alt="image of character stats view">
         <img src="img/characterManager/character_manager_inventory.png" 
             alt="image of character inventory view">
