--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="scripts/jquery.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Kelsey's Portfolio</title>
 </head>
 <body>
-    
 <ul id="menu">
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
@@ -70,6 +71,9 @@
             alt="image of character notes view">
     </div>
 </div>
-    
+
+<div id="overlay" class="disable">
+    <img id="overlay-img">
+</div>
 </body>
 </html>
