added custom scrollbar (firefox only)

--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -55,7 +55,7 @@
     </div>
 </div>
 
-<div class="content-right">
+<div class="content-right scroller">
     <div class="img-container">
         <img src="img/characterManager/character_manager_select_chacacter.png" 
             alt="Image of select character view">    
