--- a/DMTools.html
+++ b/DMTools.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="scripts/jquery.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Kelsey's Portfolio</title>
 </head>
@@ -44,11 +46,20 @@
         design of the UI and to make effective use of my white space.
     </p>
     <hr>
-    <img src="img/DMTools/DMTools_select_Adventure.png" alt="">
-    <img src="img/DMTools/DMTools_mosnter_maker.png" alt="">
-    <img src="img/DMTools/DMTools_encounter_tracker.png" alt="">
-    <img src="img/DMTools/DMTools_encounter_maker.png" alt="">
+   
 </div>
-    
+
+<div class="content-right scroller">
+    <div class="img-container">
+        <img src="img/DMTools/DMTools_select_Adventure.png" alt="">
+        <img src="img/DMTools/DMTools_mosnter_maker.png" alt="">
+        <img src="img/DMTools/DMTools_encounter_tracker.png" alt="">
+        <img src="img/DMTools/DMTools_encounter_maker.png" alt="">
+    </div>
+</div>
+
+<div id="overlay" class="disable">
+    <img id="overlay-img">
+</div>
 </body>
 </html>
