--- a/FarmKillPig.html
+++ b/FarmKillPig.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="scripts/jquery.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Kelsey's Portfolio</title>
 </head>
@@ -46,9 +48,17 @@
       the world depending on weather/location and a day/night cycle for the same purpose 
       (the two systems work together). 
   </p>
-  <img src="img//FarmKillPig/FarmKillPig_dashpng.png" alt="">
-  <img src="img/FarmKillPig/FarmKillPig_reload.png" alt="">
 </div>
-    
+
+<div class="content-right scroller">
+    <div class="img-container">
+        <img src="img//FarmKillPig/FarmKillPig_dashpng.png" alt="">
+        <img src="img/FarmKillPig/FarmKillPig_reload.png" alt="">
+    </div>
+</div>
+
+<div id="overlay" class="disable">
+    <img id="overlay-img">
+</div>
 </body>
 </html>
