--- a/Learn_Unity.html
+++ b/Learn_Unity.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="scripts/jquery.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Kelsey's Portfolio</title>
 </head>
@@ -35,12 +37,20 @@
         This is a website that I needed to create for one of my classes
         I chose to make a site for learning Unity2D.
     </p>
-    <img src="img/comp266/comp266_desktop01.png" alt="">
-    <img src="img/comp266/comp266_desktop02.png" alt="">
-    <img src="img/comp266/comp266_mobile01.png" alt="">
-    <img src="img/comp266/comp266_mobile02.png" alt="">
-    <img src="img/comp266/comp266_mobile03.png" alt="">
 </div>
-    
+
+<div class="content-right scroller">
+    <div class="img-container">
+        <img src="img/comp266/comp266_desktop01.png" alt="">
+        <img src="img/comp266/comp266_desktop02.png" alt="">
+        <img src="img/comp266/comp266_mobile01.png" alt="">
+        <img src="img/comp266/comp266_mobile02.png" alt="">
+        <img src="img/comp266/comp266_mobile03.png" alt="">
+    </div>
+</div>
+
+<div id="overlay" class="disable">
+    <img id="overlay-img">
+</div>
 </body>
 </html>
