added close button to overlay

--- a/FarmKillPig.html
+++ b/FarmKillPig.html
@@ -58,6 +58,7 @@
 </div>
 
 <div id="overlay" class="disable">
+    <button id="close-button">X</button>
     <img id="overlay-img">
 </div>
 </body>
