--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -73,7 +73,12 @@
 </div>
 
 <div id="overlay" class="disable">
-    <img id="overlay-img">
+    <div class="row">
+        <button id="close-button">X</button>
+    </div>
+    <div class="row">
+        <img id="overlay-img">
+    </div>
 </div>
 </body>
 </html>
