--- a/Learn_Unity.html
+++ b/Learn_Unity.html
@@ -50,6 +50,7 @@
 </div>
 
 <div id="overlay" class="disable">
+    <button id="close-button">X</button>
     <img id="overlay-img">
 </div>
 </body>
