--- a/DMTools.html
+++ b/DMTools.html
@@ -59,8 +59,12 @@
 </div>
 
 <div id="overlay" class="disable">
-    <button id="close-button">X</button>
-    <img id="overlay-img">
+    <div class="row">
+        <button id="close-button">X</button>
+    </div>
+    <div class="row">
+        <img id="overlay-img">
+    </div>
 </div>
 </body>
 </html>
