added hamburger menu

--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="scripts/jquery.js"></script>
     <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Kelsey's Portfolio</title>
 </head>
 <body>
@@ -28,6 +29,11 @@
        </div>
     </li>
     <li id="contact"><a href="contact.html">Contact</a></li>
+    <li class="icon">
+        <a href="javascript:void(0);" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
+    </li>
 </ul>
   
 <div class="content">
