--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,7 @@
 <body>
     
 <ul id="menu">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
+    <li><a href="index.html">About</a></li>
     <li><a href="experience.html">Experience</a></li>
     <li>
        <div class="dropdown">
