--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     
 <ul id="menu">
-    <li><a class="active" href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
+    <li class="active"><a href="index.html">About</a></li>
     <li><a href="experience.html">Experience</a></li>
     <li>
        <div class="dropdown">
@@ -30,9 +29,12 @@
 </ul>
   
 <div class="content">
-    <p>Computer Science and New Media Major. Sorry for the poor design I had to throw this together short notice.</p>
-    <p>Date updated: 2022-04-30</p>
+    <p>Hello,</p>
+    <p>
+        I'm a 3rd year computer science and new media student at the University 
+        of Lethbridge. 
+    </p>
 </div>
-
+    
 </body>
 </html>
