--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -27,7 +27,6 @@
         </div>
        </div>
     </li>
-    <li id="contact"><a href="contact.html">Contact</a></li>
     <li class="icon">
         <a href="javascript:void(0);" onclick="myFunction()">
             <i class="fa fa-bars"></i>
@@ -37,7 +36,7 @@
   
 <div class="content">
     <div>
-        <h1>Character Manager</h1>
+        <h1 class="Title">Character Manager</h1>
         <p>
             This is a project that I made with WPF. it consists of c# code and
             uses json.net to store data. I created this application because I 
@@ -57,6 +56,8 @@
             The main thing I learnt was the MVVM design pattern, and I was able to
             reinforce what I knew about the SOLID principals.
         </p>
+        <hr>
+        <p>development status: <span class="status-working">Working</span></p>
     </div>
 </div>
 
