--- a/DMTools.html
+++ b/DMTools.html
@@ -27,11 +27,10 @@
         </div>
        </div>
     </li>
-    <li id="contact"><a href="contact.html">Contact</a></li>
 </ul>
   
 <div class="content">
-    <h1>DM Tools</h1>
+    <h1 class="Title">DM Tools</h1>
     <p>
         This is a project made with WPF. It functions the same as 
         <a href="Character_Manager.html"> Character Manager</a>.
@@ -41,10 +40,11 @@
         This project is in early development.
     </p>
     <p>
-        This was the 2nd project I made in WPF so my main focus here was the
+        This was the second project I made in WPF so my main focus here was the
         design of the UI and to make effective use of my white space.
     </p>
     <hr>
+    <p>development status: <span class="status-paused">Paused</span></p>
    
 </div>
 
