--- a/FarmKillPig.html
+++ b/FarmKillPig.html
@@ -27,11 +27,10 @@
         </div>
        </div>
     </li>
-    <li id="contact"><a href="contact.html">Contact</a></li>
 </ul>
   
 <div class="content">
-  <h1>FarmKillPig</h1>
+  <h1 class="Title">FarmKillPig</h1>
   <p>
       This project is made in Unity 2D. I started making it over the summer
       last year when I was bored. The initial project was made in roughly 2 hours
@@ -47,6 +46,8 @@
       the world depending on weather/location and a day/night cycle for the same purpose 
       (the two systems work together). 
   </p>
+  <hr>
+<p>development status: <span class="status-complete">Finished</span></p>
 </div>
 
 <div class="content-right scroller">
