--- a/Learn_Unity.html
+++ b/Learn_Unity.html
@@ -27,15 +27,39 @@
         </div>
        </div>
     </li>
-    <li id="contact"><a href="contact.html">Contact</a></li>
 </ul>
   
 <div class="content">
-    <h1>Learn Unity</h1>
+    <h1 class="Title">Learn Unity</h1>
     <p>
-        This is a website that I needed to create for one of my classes
-        I chose to make a site for learning Unity2D.
+        This project was for a course I took in web development. We were asked
+        to choose a topic and create a website about it. I chose to make a 
+        website teaching people how to make 2D games in Unity.
     </p>
+    <p>
+        Some of the specific site requirments were:
+    </p>
+    <ol>
+        <li>
+            Fully responsive, this meant that it needed to work on all
+            devices regardless of screen size.
+        </li>
+        <li>
+            Needed to work in all the major browsers. This included Firefox,
+            Chrome, Edge, Samsung Internet, and Safari
+        </li>
+        <li>
+            Needed to make use of some external API, I chose to use Youtubes.
+        </li>
+        <li>
+            Use of some third party library, I chose react.
+        </li>
+        <li>
+            Use of javascript, I implemented a quizing system, etc.
+        </li>
+    </ol>
+    <hr>
+    <p>development status: <span class="status-complete">Finished</span></p>
 </div>
 
 <div class="content-right scroller">
