--- a/index.html
+++ b/index.html
@@ -25,15 +25,28 @@
         </div>
        </div>
     </li>
-    <li id="contact"><a href="contact.html">Contact</a></li>
 </ul>
   
 <div class="content">
-    <p>Hello,</p>
+    <h1 class="Title">About Me!</h1>
     <p>
-        I'm a 3rd year computer science and new media student at the University 
-        of Lethbridge. 
+        My name is Kelsey, Welcome to my Portfolio!
     </p>
+    <p>
+        I am in my fifth year of university, double majoring in Computer Science
+        and New Media.
+    </p>
+
+    <p>
+        Since highschool I have spent lots of my free time working on video games,
+        and other software projects. I started learning when I saw a course on
+        <a href="https://www.udemy.com/">Udemy</a> that tought game development
+        using the Unity game engine. I already had some programming experience 
+        with javascript, but immediately fell for c#. My primary programming 
+        langue is c# though I am conpetent in c++, Python, and Java as well.
+    </p>
+
+    <p>I can be contacted at <a href="mailto:k.sanderman@gmail.com"> k.sanderman01@gmail.com</a></p>
 </div>
     
 </body>
