--- a/experience.html
+++ b/experience.html
@@ -25,18 +25,17 @@
         </div>
        </div>
     </li>
-    <li id="contact"><a href="contact.html">Contact</a></li>
 </ul>
   
 <div class="content">
-    <h1>Acedemic</h1>
+    <h1 class="Title">Acedemic</h1>
     <p>
         During my university career I have worked with c++ to create 2 small
         console applications in groups of 4. One was a small text adventure 
         game, on this Project applided my knowledge of design patterns. Some 
         of the patterns used include the following.
     </p>
-    <ul>
+    <ul class="empty">
         <li>Observer</li>
         <li>Command</li>
         <li>Singleton</li>
@@ -56,14 +55,47 @@
         skills and tool set related to testing. for this project we needed to use
         stubs and mocking to write our tests. 
     </p>
-    <h1>Personal</h1>
+    <p>
+        Most recently I completed a course on Artificial Intelligence, for
+        this class we were tasked with three programming assignments and
+        a final project. The assignments and project were as follows:
+    </p>
+    <ol>
+        <li>
+            Write a program in Python to implement 8-puzzle problem using 
+            iterative deepening depth-first search
+        </li>
+        <li>
+            Implement the tic-tac-toe game using the minimax algorithm with 
+            Alpha-beta pruning 
+        </li>
+        <li>
+            Using the CSPs and backtracking search algorithm, implement a
+            Sudoku solver
+        </li>
+        <li>
+            And finally the project was to choose something for yourself to do.
+            I chose to determine if it would be worth writing your own A* 
+            pathfinding algorithm for games in Unity or better to use a
+            package from the Unity asset store. This required me to write my
+            own implementation of the A* algorithm and research ways to 
+            optimize it.
+        </li>
+    </ol>
+
+    <h1 class="Title">Personal</h1>
     <p>
         During my free time I do like to write my own software, and have worked
         with the Unity game engine for about 5 years now and by extent C#. I 
-        have also worked with WPF to make two windows applications. These personal 
+        have also worked with WPF to make two Windows applications. These personal 
         projects are where I have gotten the bulk of my experience. It was while 
         making game in Unity that I learned of many different design patterns while
         I learned about architectural patterens working with WPF.
+    </p>
+    <p>
+        I also took it upon myself to learn Android Studio, for this I took a
+        course on <a href="https://www.udemy.com/">Udemy</a> and later started
+        work on a mobile application for Dungeions & Dragons character management. 
     </p>
 </div>
     
