update to FKP project

--- a/FarmKillPig.html
+++ b/FarmKillPig.html
@@ -47,7 +47,7 @@
       (the two systems work together). 
   </p>
   <hr>
-<p>development status: <span class="status-complete">Finished</span></p>
+<p>development status: <span class="status-paused">Paused</span></p>
 </div>
 
 <div class="content-right scroller">
