cahnged farmkillpig to fkp

--- a/FarmKillPig.html
+++ b/FarmKillPig.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="DMTools.html">DMTools</a></li>
                 <li><a href="Character_Manager.html">Character Manager</a></li>
-                <li class="active"><a href="FarmKillPig.html">FarmKillPig</a></li>
+                <li class="active"><a href="FarmKillPig.html">FKP</a></li>
                 <li><a href="Learn_Unity.html">Learn Unity</a></li>
             </ul>
         </div>
@@ -30,7 +30,7 @@
 </ul>
   
 <div class="content">
-  <h1 class="Title">FarmKillPig</h1>
+  <h1 class="Title">FKP</h1>
   <p>
       This project is made in Unity 2D. I started making it over the summer
       last year when I was bored. The initial project was made in roughly 2 hours
