--- a/DMTools.html
+++ b/DMTools.html
@@ -21,7 +21,7 @@
             <ul>
                 <li class="active"><a href="DMTools.html">DMTools</a></li>
                 <li><a href="Character_Manager.html">Character Manager</a></li>
-                <li><a href="FarmKillPig.html">FarmKillPig</a></li>
+                <li><a href="FarmKillPig.html">FKP</a></li>
                 <li><a href="Learn_Unity.html">Learn Unity</a></li>
             </ul>
         </div>
