added buttons for image navigation

--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -83,7 +83,13 @@
         <button id="close-button">X</button>
     </div>
     <div class="row">
+        <button id="prev">
+            '<'
+        </button>
         <img id="overlay-img">
+        <button id="next">
+            '>'
+        </button>
     </div>
 </div>
 </body>
