--- a/DMTools.html
+++ b/DMTools.html
@@ -51,9 +51,9 @@
 <div class="content-right scroller">
     <div class="img-container">
         <img src="img/DMTools/DMTools_select_Adventure.png" alt="">
-        <img src="img/DMTools/DMTools_mosnter_maker.png" alt="">
         <img src="img/DMTools/DMTools_encounter_tracker.png" alt="">
         <img src="img/DMTools/DMTools_encounter_maker.png" alt="">
+        <img src="img/DMTools/DMTools_mosnter_maker.png" alt="">
     </div>
 </div>
 
@@ -62,7 +62,13 @@
         <button id="close-button">X</button>
     </div>
     <div class="row">
+        <button id="prev">
+            '<'
+        </button>
         <img id="overlay-img">
+        <button id="next">
+            '>'
+        </button>
     </div>
 </div>
 </body>
