updated the experiene page

--- a/experience.html
+++ b/experience.html
@@ -28,6 +28,17 @@
 </ul>
   
 <div class="content">
+    <h1 class="Title">Professional</h1>
+    <p>
+        I did a freelance project right out of highschool to update the website
+        for a local company. I create the website using the MEAN development 
+        stack, Mongo DB, Expressjs, Angular, and Node.js. The site need some
+        public pages that where about the company, but they also need some
+        private pages for internal use.
+    </p>
+
+    <hr>
+
     <h1 class="Title">Acedemic</h1>
     <p>
         During my university career I have worked with c++ to create 2 small
@@ -82,6 +93,8 @@
             optimize it.
         </li>
     </ol>
+
+    <hr>
 
     <h1 class="Title">Personal</h1>
     <p>
