--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -8,7 +8,7 @@
     <script src="scripts/jquery.js"></script>
     <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Kelsey's Portfolio</title>
+    <title>Kelsey's Portfolio | Character Manager</title>
 </head>
 <body>
 <ul id="menu">
