--- a/FarmKillPig.html
+++ b/FarmKillPig.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="scripts/jquery.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Kelsey's Portfolio</title>
+    <title>Kelsey's Portfolio | FKP</title>
 </head>
 <body>
     
