--- a/experience.html
+++ b/experience.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Kelsey's Portfolio</title>
+    <title>Kelsey's Portfolio | Experience</title>
 </head>
 <body>
     
