added another project to the site

--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -23,15 +23,16 @@
                 <li class="active"><a href="Character_Manager.html">Character Manager</a></li>
                 <li><a href="FarmKillPig.html">FKP</a></li>
                 <li><a href="Learn_Unity.html">Learn Unity</a></li>
+                <li><a href="InventoryManager.html">Inventory Manager</a></li>
             </ul>
         </div>
        </div>
     </li>
-    <li class="icon">
+    <!-- <li class="icon">
         <a href="javascript:void(0);" onclick="myFunction()">
             <i class="fa fa-bars"></i>
         </a>
-    </li>
+    </li> -->
 </ul>
   
 <div class="content">
@@ -57,7 +58,7 @@
             reinforce what I knew about the SOLID principals.
         </p>
         <hr>
-        <p>development status: <span class="status-working">Working</span></p>
+        <p>development status: <span class="status-complete">Complete</span></p>
     </div>
 </div>
 
