--- a/FarmKillPig.html
+++ b/FarmKillPig.html
@@ -23,6 +23,7 @@
                 <li><a href="Character_Manager.html">Character Manager</a></li>
                 <li class="active"><a href="FarmKillPig.html">FKP</a></li>
                 <li><a href="Learn_Unity.html">Learn Unity</a></li>
+                <li><a href="InventoryManager.html">Inventory Manager</a></li>
             </ul>
         </div>
        </div>
