--- a/Learn_Unity.html
+++ b/Learn_Unity.html
@@ -23,6 +23,7 @@
                 <li><a href="Character_Manager.html">Character Manager</a></li>
                 <li><a href="FarmKillPig.html">FKP</a></li>
                 <li class="active"><a href="Learn_Unity.html">Learn Unity</a></li>
+                <li><a href="InventoryManager.html">Inventory Manager</a></li>
             </ul>
         </div>
        </div>
@@ -59,7 +60,7 @@
         </li>
     </ol>
     <hr>
-    <p>development status: <span class="status-complete">Finished</span></p>
+    <p>development status: <span class="status-complete">Complete</span></p>
 </div>
 
 <div class="content-right scroller">
