updated the colors to use my color scheme

--- a/index.html
+++ b/index.html
@@ -31,20 +31,58 @@
 <div class="content">
     <h1 class="Title">About Me!</h1>
     <p>
-        My name is Kelsey, Welcome to my Portfolio!
+       DandyDev (Kelsey)
     </p>
     <p>
-        I am in my fifth year of university, double majoring in Computer Science
-        and New Media.
+        Software developer by training, designer in practice.
     </p>
 
     <p>
-        Since highschool I have spent lots of my free time working on video games,
-        and other software projects. I started learning when I saw a course on
-        <a href="https://www.udemy.com/">Udemy</a> that tought game development
-        using the Unity game engine. I already had some programming experience 
-        with javascript, but immediately fell for c#. My primary programming 
-        langue is c# though I am conpetent in c++, Python, and Java as well.
+        Kelsey is a New Media Practitioner with a background in 
+        computer science. His education consists of a BFA/BSc in 
+        New Media and Computer Science (Fall 2024). Currently 
+        Kelsey works as a Web Accessibility Assistant for the 
+        University of Lethbridge, writing image descriptions 
+        for a calculus textbook. Kelsey was introduced to 
+        programming and game design back in 2016, through the 
+        Unity game engine. Since then, Kelsey’s programming 
+        skills have continued to grow and his design focus have 
+        shifted to interaction design, with the goal of creating 
+        a more accessible digital world. Kelsey is working towards 
+        this goal by follow accessibility practices and 
+        implementing accessibility features into the interactive 
+        systems he creates. Outside of work and academics Kelsey 
+        continues to enjoy making small games, bike rides, and 
+        playing Volleyball. 
+    </p>
+
+    <p>
+        My journey began in 2016 when I learned about Unity from an 
+        online ad for a course on Udemy by GameDev.tv. I had always 
+        wanted to make games and learn to program; my discovery 
+        afforded me the opportunity to do both. I started out 
+        designing small games, but this quickly morphed into doing
+         interaction design for games and other interactive systems. 
+         My focus shifted from making games that were fun to play 
+         to being making games that felt good to play while still 
+         being fun. At this time, I also started making of types 
+         of software outside of games like a character manager 
+         for tabletop RPGs. The focus of my work is to make 
+         interactive systems that are simple to use and as 
+         accessible as I can manage with the technologies I 
+         have available to me. I believe in giving users 
+         multiple ways to complete tasks as this will not only 
+         help with accessibility but also supports a range of 
+         different types of users. Having more than one way to 
+         complete a task means novice users can have an 
+         easy-to-follow method, but power users can also be 
+         accommodated with short-cuts and other features that 
+         are quicker than the step by step process a new user 
+         would follow. For me creating simple to use interactive 
+         systems means breaking things down to the bare minimum and 
+         discarding anything that is not relevant to the current 
+         context of the system state. This lessons the cognitive 
+         load on the end user, making things easier for new users.
     </p>
 
     <p>I can be contacted at <a href="mailto:k.sanderman@gmail.com"> k.sanderman01@gmail.com</a></p>
