--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -14,6 +14,7 @@
 <ul id="menu">
     <li><a href="index.html">About</a></li>
     <li><a href="experience.html">Experience</a></li>
+    <li><a href="Mywork.html">My Work</a></li>
     <li  class="active">
        <div class="dropdown">
         <span>Projects</span>
