--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <ul id="menu">
     <li class="active"><a href="index.html">About</a></li>
     <li><a href="experience.html">Experience</a></li>
+    <li><a href="Mywork.html">My Work</a></li>
     <li>
        <div class="dropdown">
         <span>Projects</span>
