added projects to the my work page

--- a/Mywork.html
+++ b/Mywork.html
@@ -39,7 +39,7 @@
 <div class="content">
     <div>
         <div>
-            <h1 class="Title">DMTools</h1>
+            <a class="Title" href="DMTools.html">DMTools</a>
             <h3>technologies used</h3>
             <ul>
                 <li>C#</li>
@@ -53,7 +53,7 @@
         <hr>
 
         <div>
-            <h1 class="Title">PCManager</h1>
+            <a class="Title" href="Character_Manager.html">PCManager</a>
             <h3>technologies used</h3>
             <ul>
                 <li>C#</li>
@@ -67,7 +67,7 @@
         <hr>
 
         <div>
-            <h1 class="Title">FKP</h1>
+            <a class="Title" href="FarmKillPig.html">FKP</a>
             <h3>technologies used</h3>
             <ul>
                 <li>C#</li>
@@ -80,7 +80,7 @@
         <hr>
 
         <div>
-            <h1 class="Title">Learn Unity</h1>
+            <a class="Title" href="Learn_Unity.html">Learn Unity</a>
             <h3>technologies used</h3>
             <ul>
                 <li>HTML5</li>
@@ -95,7 +95,7 @@
         <hr>
 
         <div>
-            <h1 class="Title">Inventory Manager</h1>
+            <a class="Title" href="InventoryManager.html">Inventory Manager</a>
             <h3>technologies used</h3>
             <ul>
                 <li>C#</li>
