--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         computer science. His education consists of a BFA/BSc in 
         New Media and Computer Science (Fall 2024). Currently 
         Kelsey works as a Web Accessibility Assistant for the 
-        University of Lethbridge, writing image descriptions 
+        institution he attends, writing image descriptions 
         for a calculus textbook. Kelsey was introduced to 
         programming and game design back in 2016, through the 
         Unity game engine. Since then, Kelsey’s programming 
