added some content to mywork

--- a/Mywork.html
+++ b/Mywork.html
@@ -21,7 +21,7 @@
         <div class="dropdown-content">
             <ul>
                 <li><a href="DMTools.html">DMTools</a></li>
-                <li><a href="Character_Manager.html">Character Manager</a></li>
+                <li><a href="Character_Manager.html">PCManager</a></li>
                 <li><a href="FarmKillPig.html">FKP</a></li>
                 <li><a href="Learn_Unity.html">Learn Unity</a></li>
                 <li><a href="InventoryManager.html">Inventory Manager</a></li>
@@ -162,13 +162,18 @@
         <hr>
 
         <div>
-            <a class="Title" href="">Pong</a>
+            <a class="Title" href="">Pong Clone</a>
             <h3>technologies used</h3>
             <ul>
                 <li>Processing</li>
             </ul>
             <h3>About</h3>
-            <p></p>
+            <p>
+                Clone of a small game called Pong. This clone was created
+                so I could write a collision detection and collision 
+                resolver algorithm, additionally it was made so I could get
+                a feel for Processing's syntax.
+            </p>
         </div>
         
         <hr>
@@ -197,7 +202,9 @@
                 <li>Visual Studio</li>
             </ul>
             <h3>About</h3>
-            <p></p>
+            <p>
+
+            </p>
         </div>
         
         <hr>
