--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -21,7 +21,7 @@
         <div class="dropdown-content">
             <ul>
                 <li><a href="DMTools.html">DMTools</a></li>
-                <li class="active"><a href="Character_Manager.html">Character Manager</a></li>
+                <li class="active"><a href="Character_Manager.html">PCManager</a></li>
                 <li><a href="FarmKillPig.html">FKP</a></li>
                 <li><a href="Learn_Unity.html">Learn Unity</a></li>
                 <li><a href="InventoryManager.html">Inventory Manager</a></li>
@@ -38,7 +38,7 @@
   
 <div class="content">
     <div>
-        <h1 class="Title">Character Manager</h1>
+        <h1 class="Title">PCManager</h1>
         <p>
             This is a project that I made with WPF. it consists of c# code and
             uses json.net to store data. I created this application because I 
