--- a/FarmKillPig.html
+++ b/FarmKillPig.html
@@ -21,7 +21,7 @@
         <div class="dropdown-content">
             <ul>
                 <li><a href="DMTools.html">DMTools</a></li>
-                <li><a href="Character_Manager.html">Character Manager</a></li>
+                <li><a href="Character_Manager.html">PCManager</a></li>
                 <li class="active"><a href="FarmKillPig.html">FKP</a></li>
                 <li><a href="Learn_Unity.html">Learn Unity</a></li>
                 <li><a href="InventoryManager.html">Inventory Manager</a></li>
