added some responsivness to the site

--- a/Learn_Unity.html
+++ b/Learn_Unity.html
@@ -93,14 +93,12 @@
             </button>
         </div>
     </div>
-    <div class="row">
-        <div class="current_image_container center">
-            <span class="active-image">.</span> 
+    <div class="row current_image_container center">
+        <span class="active-image">.</span> 
             <span>.</span> 
             <span>.</span>
             <span>.</span> 
             <span>.</span>
-        </div>
     </div>
 </div>
 </body>
