updated top nav to be inside header>nav

--- a/InventoryManager.html
+++ b/InventoryManager.html
@@ -11,30 +11,34 @@
     <title>Kelsey's Portfolio | Inventory Manager</title>
 </head>
 <body>
-<ul id="menu">
-    <li><a href="index.html">About</a></li>
-    <li><a href="experience.html">Experience</a></li>
-    <li><a href="Mywork.html">My Work</a></li>
-    <li  class="active">
-       <div class="dropdown">
-        <span>Projects</span>
-        <div class="dropdown-content">
-            <ul>
-                <li><a href="DMTools.html">DMTools</a></li>
-                <li><a href="Character_Manager.html">PCManager</a></li>
-                <li><a href="FarmKillPig.html">FKP</a></li>
-                <li><a href="Learn_Unity.html">Learn Unity</a></li>
-                <li class="active"><a href="InventoryManager.html">Inventory Manager</a></li>
-            </ul>
-        </div>
-       </div>
-    </li>
-    <!-- <li class="icon">
-        <a href="javascript:void(0);" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-        </a>
-    </li> -->
-</ul>
+<header>
+    <nav>
+        <ul id="menu">
+            <li><a href="index.html">About</a></li>
+            <li><a href="experience.html">Experience</a></li>
+            <li><a href="Mywork.html">My Work</a></li>
+            <li  class="active">
+               <div class="dropdown">
+                <span>Projects</span>
+                <div class="dropdown-content">
+                    <ul>
+                        <li><a href="DMTools.html">DMTools</a></li>
+                        <li><a href="Character_Manager.html">PCManager</a></li>
+                        <li><a href="FarmKillPig.html">FKP</a></li>
+                        <li><a href="Learn_Unity.html">Learn Unity</a></li>
+                        <li class="active"><a href="InventoryManager.html">Inventory Manager</a></li>
+                    </ul>
+                </div>
+               </div>
+            </li>
+            <!-- <li class="icon">
+                <a href="javascript:void(0);" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </li> -->
+        </ul>
+    </nav>
+</header>
   
 <div class="content">
     <div>
