--- a/FarmKillPig.html
+++ b/FarmKillPig.html
@@ -11,25 +11,29 @@
 </head>
 <body>
     
-<ul id="menu">
-    <li><a href="index.html">About</a></li>
-    <li><a href="experience.html">Experience</a></li>
-    <li><a href="Mywork.html">My Work</a></li>
-    <li  class="active">
-       <div class="dropdown">
-        <span>Projects</span>
-        <div class="dropdown-content">
-            <ul>
-                <li><a href="DMTools.html">DMTools</a></li>
-                <li><a href="Character_Manager.html">PCManager</a></li>
-                <li class="active"><a href="FarmKillPig.html">FKP</a></li>
-                <li><a href="Learn_Unity.html">Learn Unity</a></li>
-                <li><a href="InventoryManager.html">Inventory Manager</a></li>
-            </ul>
-        </div>
-       </div>
-    </li>
-</ul>
+<header>
+    <nav>
+        <ul id="menu">
+            <li><a href="index.html">About</a></li>
+            <li><a href="experience.html">Experience</a></li>
+            <li><a href="Mywork.html">My Work</a></li>
+            <li  class="active">
+               <div class="dropdown">
+                <span>Projects</span>
+                <div class="dropdown-content">
+                    <ul>
+                        <li><a href="DMTools.html">DMTools</a></li>
+                        <li><a href="Character_Manager.html">PCManager</a></li>
+                        <li class="active"><a href="FarmKillPig.html">FKP</a></li>
+                        <li><a href="Learn_Unity.html">Learn Unity</a></li>
+                        <li><a href="InventoryManager.html">Inventory Manager</a></li>
+                    </ul>
+                </div>
+               </div>
+            </li>
+        </ul>
+    </nav>
+</header>
   
 <div class="content">
   <h1 class="Title">FKP</h1>
