--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -31,11 +31,11 @@
                 </div>
                </div>
             </li>
-            <!-- <li class="icon">
+            <li class="icon">
                 <a href="javascript:void(0);" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
                 </a>
-            </li> -->
+            </li>
         </ul>
     </nav>
 </header>
