--- a/FarmKillPig.html
+++ b/FarmKillPig.html
@@ -30,6 +30,11 @@
                     </ul>
                 </div>
                </div>
+               <li class="icon">
+                <a href="javascript:void(0);" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </li>
             </li>
         </ul>
     </nav>
