--- a/Learn_Unity.html
+++ b/Learn_Unity.html
@@ -31,6 +31,11 @@
                 </div>
                </div>
             </li>
+            <li class="icon">
+                <a href="javascript:void(0);" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
